Refactor view widths that were previously passed to layout in viewdata so they are only defined within the view itself.

--- a/CheckYourEligibility-Parent/Views/Check/Outcome/Eligible.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Outcome/Eligible.cshtml
@@ -2,58 +2,60 @@
     ViewData["Title"] = "Children eligible";
 }
 
-<a class="govuk-back-link-nolink"></a>
+<div class="govuk-grid-column-full">
+    <a class="govuk-back-link-nolink"></a>
 
-<div id="content" data-type="Eligible" class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-        <div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner" data-govuk-notification-banner-init="">
-            <div class="govuk-notification-banner__header">
-                <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">@ViewData["Title"]</h2>
+    <div id="content" data-type="Eligible" class="govuk-grid-row">
+        <div class="govuk-grid-column-two-thirds">
+            <div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner" data-govuk-notification-banner-init="">
+                <div class="govuk-notification-banner__header">
+                    <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">@ViewData["Title"]</h2>
+                </div>
+                <div class="govuk-notification-banner__content">
+                    <h3 class="govuk-notification-banner__heading">
+                        Your children are eligible for free school meals.
+                    </h3>
+                </div>
             </div>
-            <div class="govuk-notification-banner__content">
-                <h3 class="govuk-notification-banner__heading">
-                    Your children are eligible for free school meals.
-                </h3>
+
+            <h1 class="govuk-heading-l">Apply for free school meals for your children</h1>
+
+            <p>This usually takes a few minutes.</p>
+
+            <ol>
+                <li>Sign in or create a GOV.UK One Login.</li>
+                <li>Add the details of all your children and their schools.</li>
+                <li>Send your application to the school.</li>
+                <li>We'll send an application confirmation email to the email address used on your GOV.UK One Login.</li>
+                <li>Your children's school will arrange the free school meals.</li>
+            </ol>
+
+            <details class="govuk-details">
+                <summary class="govuk-details__summary">
+                    <span class="govuk-details__summary-text">
+                        About GOV.UK One Login
+                    </span>
+                </summary>
+                <div class="govuk-details__text">
+                    GOV.UK One Login lets you sign in and prove your identity quickly and easily. You can use the same account for some other government services.
+                </div>
+            </details>
+
+            <div class="govuk-button-group">
+                <a href="/Check/SignIn" class="govuk-button govuk-!-margin-top-5">Continue to GOV.UK One Login</a>
+                <a class="govuk-link" href="~/Home/Index"> Return to start now</a>
             </div>
-        </div>
 
-        <h1 class="govuk-heading-l">Apply for free school meals for your children</h1>
+            <hr class="govuk-section-break govuk-section-break govuk-section-break--m">
 
-        <p>This usually takes a few minutes.</p>
+            <h2 class="govuk-heading-m">Further guidance and other ways to apply</h2>
+            <p>If you need further support, <a target="_blank" href="/Home/Parental_Guidance">check the more detailed guidance</a>  for parents and guardians.</p>
+            <p>If you cannot apply online, you can fill in <a href="@Url.Action("fsm_print_version", "Home")">the 'Free school meals entitlement checker' form</a> and give it to your children's school. </p>
 
-        <ol>
-            <li>Sign in or create a GOV.UK One Login.</li>
-            <li>Add the details of all your children and their schools.</li>
-            <li>Send your application to the school.</li>
-            <li>We'll send an application confirmation email to the email address used on your GOV.UK One Login.</li>
-            <li>Your children's school will arrange the free school meals.</li>
-        </ol>
 
-        <details class="govuk-details">
-            <summary class="govuk-details__summary">
-                <span class="govuk-details__summary-text">
-                    About GOV.UK One Login
-                </span>
-            </summary>
-            <div class="govuk-details__text">
-                GOV.UK One Login lets you sign in and prove your identity quickly and easily. You can use the same account for some other government services.
+            <div class="govuk-inset-text">
+                It takes longer to apply through your school than it does online.
             </div>
-        </details>
-
-        <div class="govuk-button-group">
-            <a href="/Check/SignIn" class="govuk-button govuk-!-margin-top-5">Continue to GOV.UK One Login</a>
-            <a class="govuk-link" href="~/Home/Index"> Return to start now</a>
-        </div>
-
-        <hr class="govuk-section-break govuk-section-break govuk-section-break--m">
-
-        <h2 class="govuk-heading-m">Further guidance and other ways to apply</h2>
-        <p>If you need further support, <a target="_blank" href="/Home/Parental_Guidance">check the more detailed guidance</a>  for parents and guardians.</p>
-        <p>If you cannot apply online, you can fill in <a href="@Url.Action("fsm_print_version", "Home")">the 'Free school meals entitlement checker' form</a> and give it to your children's school. </p>
-
-
-        <div class="govuk-inset-text">
-            It takes longer to apply through your school than it does online.
         </div>
     </div>
 </div>
