--- a/CheckYourEligibility-Parent/Views/Home/Privacy.cshtml
+++ b/CheckYourEligibility-Parent/Views/Home/Privacy.cshtml
@@ -1,106 +1,107 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
     ViewData["Title"] = "Privacy Notice";
-    ViewData["Layout"] = "two_thirds";
 }
 
-<a class="govuk-back-link" href="@Url.Action("Index", "Home")" onclick="history.back(); return false;">Back</a>
-@* <a class="govuk-back-link-nolink"></a> *@
+<div class="govuk-grid-column-two-thirds">
+    <a class="govuk-back-link" href="@Url.Action("Index", "Home")" onclick="history.back(); return false;">Back</a>
+    @* <a class="govuk-back-link-nolink"></a> *@
 
-<h1 class="govuk-heading-l">@ViewData["Title"]</h1>
+    <h1 class="govuk-heading-l">@ViewData["Title"]</h1>
 
-<h2 class="govuk-heading-m">Who we are</h2>
-<p class="govuk-body">
-    This service is run by the Department of Education (DfE).
-</p>
-<p class="govuk-body">
-    This means the DfE is the data controller for the Check a family's eligibility service, and decides how and why any personal data is processed, including by third parties on our behalf.
-</p>
-<p class="govuk-body">
-    We will use the information you give us according to <a href="https://www.gov.uk/government/organisations/department-for-education/about/personal-information-charter">DfE personal information charter.</a>
-</p>
-<p>
-    This privacy policy is relevant to parents and/or guardians using the service, and also to any children you may be
-    checking or applying for.
-</p>
-
-
-<h2 class="govuk-heading-m">Personal data we use</h2>
-<p class="govuk-body">
-    This service will use your:
-</p>
-<ul class="govuk-list govuk-list--bullet">
-    <li>
-        personal details as a parent or guardian, including your name and email address
-    </li>
-    <li>
-        your National Insurance (NI) number and/or asylum support reference (previous known as National Asylum Support Service) number
-    </li>
-    <li>
-        any social and/or financial benefits claimed by you
-    </li>
-    <li>
-        children’s details including first names, surnames, schools, eligibility numbers and dates of birth
-    </li>
-    <li>
-        details of which version of web browser you use to access the service
-    </li>
-</ul>
-<p></p>
-<p class="govuk-body">
-    We must have a valid reason to collect your personal data – also known as ‘lawful basis’ under the The Data Protection Act 2018. Our lawful basis is that of 'public task', so that we can run the Entitlement checker as a service to you.
-</p>
-<p class="govuk-body">
-    In relation to your child’s personal information, DfE has specific privacy policies. You can read privacy information for:
-</p>
-<ul>
-    <li>
-        <a href="https://www.gov.uk/government/publications/privacy-information-children-and-young-people-under-18/privacy-information-children-and-young-people-under-18">children and young people under 18 </a>
-    </li>
-    <li>
-        <a href="https://www.gov.uk/government/publications/privacy-information-early-years-foundation-stage-to-key-stage-3/privacy-information-early-years-foundation-stage-to-key-stage-3">early years foundation stage to key stage 3</a>
-    </li>
-    <li>
-        <a href="https://www.gov.uk/government/publications/privacy-information-key-stage-4-and-5-and-adult-education/privacy-information-key-stage-4-and-5-and-adult-education">key stage 4 and 5 and adult education </a>
-    </li>
-</ul>
+    <h2 class="govuk-heading-m">Who we are</h2>
+    <p class="govuk-body">
+        This service is run by the Department of Education (DfE).
+    </p>
+    <p class="govuk-body">
+        This means the DfE is the data controller for the Check a family's eligibility service, and decides how and why any personal data is processed, including by third parties on our behalf.
+    </p>
+    <p class="govuk-body">
+        We will use the information you give us according to <a href="https://www.gov.uk/government/organisations/department-for-education/about/personal-information-charter">DfE personal information charter.</a>
+    </p>
+    <p>
+        This privacy policy is relevant to parents and/or guardians using the service, and also to any children you may be
+        checking or applying for.
+    </p>
 
 
-<h2 class="govuk-heading-m">How we use your data</h2>
-<p>
-    We will use your personal information to:
-</p>
-<ul class="govuk-list--bullet">
-    <li>
-        check if you or your child/children are eligible for entitlements such as free school meals
-    </li>
-    <li>
-        send eligibility outcomes to schools in order to register you and your child/children for the possible entitlement
-    </li>
-    <li>
-        send eligibility outcomes to local authorities
-    </li>
-</ul>
+    <h2 class="govuk-heading-m">Personal data we use</h2>
+    <p class="govuk-body">
+        This service will use your:
+    </p>
+    <ul class="govuk-list govuk-list--bullet">
+        <li>
+            personal details as a parent or guardian, including your name and email address
+        </li>
+        <li>
+            your National Insurance (NI) number and/or asylum support reference (previous known as National Asylum Support Service) number
+        </li>
+        <li>
+            any social and/or financial benefits claimed by you
+        </li>
+        <li>
+            children’s details including first names, surnames, schools, eligibility numbers and dates of birth
+        </li>
+        <li>
+            details of which version of web browser you use to access the service
+        </li>
+    </ul>
+    <p></p>
+    <p class="govuk-body">
+        We must have a valid reason to collect your personal data – also known as ‘lawful basis’ under the The Data Protection Act 2018. Our lawful basis is that of 'public task', so that we can run the Entitlement checker as a service to you.
+    </p>
+    <p class="govuk-body">
+        In relation to your child’s personal information, DfE has specific privacy policies. You can read privacy information for:
+    </p>
+    <ul>
+        <li>
+            <a href="https://www.gov.uk/government/publications/privacy-information-children-and-young-people-under-18/privacy-information-children-and-young-people-under-18">children and young people under 18 </a>
+        </li>
+        <li>
+            <a href="https://www.gov.uk/government/publications/privacy-information-early-years-foundation-stage-to-key-stage-3/privacy-information-early-years-foundation-stage-to-key-stage-3">early years foundation stage to key stage 3</a>
+        </li>
+        <li>
+            <a href="https://www.gov.uk/government/publications/privacy-information-key-stage-4-and-5-and-adult-education/privacy-information-key-stage-4-and-5-and-adult-education">key stage 4 and 5 and adult education </a>
+        </li>
+    </ul>
 
-<h2 class="govuk-heading-m">How long we keep your data</h2>
-<h3 class="govuk-heading-s">Checks resulting in no eligibility or no claims</h3>
-<p class="govuk-body">
-    We keep your personal information for 7 days, then it will be securely destroyed.
-</p>
-<h3 class="govuk-heading-s">Checks resulting in claiming free school meals</h3>
-<p class="govuk-body">
-    If you are eligible and your children go on to claim free school meals, we'll keep your personal information for the duration that your children are receiving free school meals and a further 6 years.
-</p>
-<h3 class="govuk-heading-s">Participation in research</h3>
-<p class="govuk-body">
-    We can lawfully keep personal data processed purely for research and statistical purposes for up to 2 years.
-</p>
 
-<h2 class="govuk-heading-m">Last updated</h2>
+    <h2 class="govuk-heading-m">How we use your data</h2>
+    <p>
+        We will use your personal information to:
+    </p>
+    <ul class="govuk-list--bullet">
+        <li>
+            check if you or your child/children are eligible for entitlements such as free school meals
+        </li>
+        <li>
+            send eligibility outcomes to schools in order to register you and your child/children for the possible entitlement
+        </li>
+        <li>
+            send eligibility outcomes to local authorities
+        </li>
+    </ul>
 
-<p class="govuk-body">
-    This version was last updated in January 2025.
-</p>
-<p class="govuk-body">
-    We may need to update this privacy notice, so we recommend you revisit this from time to time.
-</p>
+    <h2 class="govuk-heading-m">How long we keep your data</h2>
+    <h3 class="govuk-heading-s">Checks resulting in no eligibility or no claims</h3>
+    <p class="govuk-body">
+        We keep your personal information for 7 days, then it will be securely destroyed.
+    </p>
+    <h3 class="govuk-heading-s">Checks resulting in claiming free school meals</h3>
+    <p class="govuk-body">
+        If you are eligible and your children go on to claim free school meals, we'll keep your personal information for the duration that your children are receiving free school meals and a further 6 years.
+    </p>
+    <h3 class="govuk-heading-s">Participation in research</h3>
+    <p class="govuk-body">
+        We can lawfully keep personal data processed purely for research and statistical purposes for up to 2 years.
+    </p>
+
+    <h2 class="govuk-heading-m">Last updated</h2>
+
+    <p class="govuk-body">
+        This version was last updated in January 2025.
+    </p>
+    <p class="govuk-body">
+        We may need to update this privacy notice, so we recommend you revisit this from time to time.
+    </p>
+</div>
