Refactor view widths that were previously passed to layout in viewdata so they are only defined within the view itself.

--- a/CheckYourEligibility-Admin/Views/Application/ApplicationDetailAppealConfirmation.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/ApplicationDetailAppealConfirmation.cshtml
@@ -3,21 +3,22 @@
 
 @{
     ViewData["Title"] = "Send this record to the local authority?";
-    ViewData["Layout"] = "two_thirds";
 }
 
-<p class="govuk-heading-l">Send this record to the local authority?</p>
-<div class="govuk-warning-text">
-    <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-    <strong class="govuk-warning-text__text">
-        <span class="govuk-visually-hidden">Warning</span>
-        This will prompt them to check the evidence you send them separately.
-    </strong>
+<div class="govuk-grid-column-two-thirds">
+    <p class="govuk-heading-l">Send this record to the local authority?</p>
+    <div class="govuk-warning-text">
+        <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+        <strong class="govuk-warning-text__text">
+            <span class="govuk-visually-hidden">Warning</span>
+            This will prompt them to check the evidence you send them separately.
+        </strong>
+    </div>
+    <div class="govuk-!-padding-bottom-3"></div>
+
+    @Html.ActionLink("Yes, send now", "ApplicationDetailAppealSend", "application", new { id = @TempData["AppAppealID"] }, new { @class = "govuk-button govuk-button--primary" })
+
+    @Html.ActionLink("No, return to record", "ApplicationDetailAppeal", "application", new { id = @TempData["AppAppealID"] }, new { @class = "govuk-button govuk-button--secondary" })
+
+    <div class="govuk-!-padding-bottom-3"></div>
 </div>
-<div class="govuk-!-padding-bottom-3"></div>
-
-@Html.ActionLink("Yes, send now", "ApplicationDetailAppealSend", "application", new { id = @TempData["AppAppealID"] }, new { @class = "govuk-button govuk-button--primary" })
-
-@Html.ActionLink("No, return to record", "ApplicationDetailAppeal", "application", new { id = @TempData["AppAppealID"] }, new { @class = "govuk-button govuk-button--secondary" })
-
-<div class="govuk-!-padding-bottom-3"></div>
