--- a/CheckYourEligibility-Admin/Views/Application/ApplicationDetailAppealConfirmationSent.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/ApplicationDetailAppealConfirmationSent.cshtml
@@ -3,20 +3,21 @@
 
 @{
     ViewData["Title"] = "Application sent for review";
-    ViewData["Layout"] = "two_thirds";
 }
 
-<span class="govuk-caption-l">Reference @ViewBag.AppReference</span>
-<h1 class="govuk-heading-xl">@ViewData["Title"]</h1>
-<p>
-    Its status has now changed to ‘Sent for review’.
+<div class="govuk-grid-column-two-thirds">
+    <span class="govuk-caption-l">Reference @ViewBag.AppReference</span>
+    <h1 class="govuk-heading-xl">@ViewData["Title"]</h1>
+    <p>
+        Its status has now changed to ‘Sent for review’.
 
-    If you don’t hear back from the local authority, get in touch with them to ask for an update.
-</p>
+        If you don’t hear back from the local authority, get in touch with them to ask for an update.
+    </p>
 
-@Html.ActionLink("Return to record", "ApplicationDetail", "application", new { id = @TempData["AppAppealID"] }, new { @class = "govuk-button govuk-button--primary" })
+    @Html.ActionLink("Return to record", "ApplicationDetail", "application", new { id = @TempData["AppAppealID"] }, new { @class = "govuk-button govuk-button--primary" })
 
-<div class="govuk-!-padding-bottom-3"></div>
-<p>@Html.ActionLink("Process more appeals", "AppealsApplications", "application", new { PageNumber = 0 }, new { @class = "" })</p>
-<p>@Html.ActionLink("Return to dashboard", "Index", "Home", null, new { @class = "" })</p>
-<p>@Html.ActionLink("Sign out", "SignOut", "Account", null, new { @class = "" })</p>
+    <div class="govuk-!-padding-bottom-3"></div>
+    <p>@Html.ActionLink("Process more appeals", "AppealsApplications", "application", new { PageNumber = 0 }, new { @class = "" })</p>
+    <p>@Html.ActionLink("Return to dashboard", "Index", "Home", null, new { @class = "" })</p>
+    <p>@Html.ActionLink("Sign out", "SignOut", "Account", null, new { @class = "" })</p>
+</div>
