--- a/CheckYourEligibility-Admin/Views/BulkCheck/BulkOutcome/Error_Data_Issue.cshtml
+++ b/CheckYourEligibility-Admin/Views/BulkCheck/BulkOutcome/Error_Data_Issue.cshtml
@@ -2,35 +2,37 @@
     ViewData["Title"] = "Error – Parent data issue";
 }
 
-<div id="content" data-type="ErrorData">
-    <a class="govuk-back-link-nolink"></a>
+<div class="govuk-grid-column-full">
+    <div id="content" data-type="ErrorData">
+        <a class="govuk-back-link-nolink"></a>
 
-    <div class="govuk-error-summary govuk-grid-column-full" data-module="govuk-error-summary">
-        <div role="alert">
-            <h2 class="govuk-error-summary__title">
-                Error – Parent data issue
-            </h2>
-            <div class="govuk-error-summary__body">
-                <ul class="govuk-list govuk-error-summary__list">
-                    <li>
-                        <strong>There are issues with the parent data on the following lines:</strong>
-                    </li>
-                    @Html.Raw(@TempData["BulkParentCheckItemsErrors"])
-
-                    @if (Convert.ToInt32(@TempData["BulkParentCheckItemsLineMoreErrors"]) > 0)
-                    {
+        <div class="govuk-error-summary govuk-grid-column-full" data-module="govuk-error-summary">
+            <div role="alert">
+                <h2 class="govuk-error-summary__title">
+                    Error – Parent data issue
+                </h2>
+                <div class="govuk-error-summary__body">
+                    <ul class="govuk-list govuk-error-summary__list">
                         <li>
-                            <strong>There are also issues on @TempData["BulkParentCheckItemsLineMoreErrors"] more lines</strong>
+                            <strong>There are issues with the parent data on the following lines:</strong>
                         </li>
-                    }
+                        @Html.Raw(@TempData["BulkParentCheckItemsErrors"])
+
+                        @if (Convert.ToInt32(@TempData["BulkParentCheckItemsLineMoreErrors"]) > 0)
+                        {
+                            <li>
+                                <strong>There are also issues on @TempData["BulkParentCheckItemsLineMoreErrors"] more lines</strong>
+                            </li>
+                        }
 
 
-                </ul>
+                    </ul>
+                </div>
             </div>
         </div>
+        <p class="govuk-body">Please make sure you’ve corrected the issues on these lines and upload the file again.</p>
+        <p>@Html.ActionLink("Try again", "Bulk_Check", "BulkCheck")</p>
+        <p><a href="@Url.Action("Index", "Home")">Return to dashboard</a></p>
+        <p>@Html.ActionLink("Sign Out", "SignOut", "Account")</p>
     </div>
-    <p class="govuk-body">Please make sure you’ve corrected the issues on these lines and upload the file again.</p>
-    <p>@Html.ActionLink("Try again", "Bulk_Check", "BulkCheck")</p>
-    <p><a href="@Url.Action("Index", "Home")">Return to dashboard</a></p>
-    <p>@Html.ActionLink("Sign Out", "SignOut", "Account")</p>
 </div>
