--- a/CheckYourEligibility-Admin/Views/Application/ApplicationDetailFinalise.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/ApplicationDetailFinalise.cshtml
@@ -3,21 +3,22 @@
 
 @{
     ViewData["Title"] = @Model.ParentName;
-    ViewData["Layout"] = "full";
 }
 
-<a class="govuk-back-link" href="@Url.Action("FinaliseApplications", "Application")" onclick="history.back(); return false;">Back</a>
-@* <a class="govuk-back-link-nolink"></a> *@
+<div class="govuk-grid-column-full">
+    <a class="govuk-back-link" href="@Url.Action("FinaliseApplications", "Application")" onclick="history.back(); return false;">Back</a>
+    @* <a class="govuk-back-link-nolink"></a> *@
 
-<div class="moj-page-header-actions">
-    <div class="moj-page-header-actions__title">
-        <h1 class="govuk-heading-xl">@ViewData["Title"]</h1>
-    </div>
-    <div class="moj-page-header-actions__actions">
-        <div class="moj-button-menu">
-            <div class="moj-button-menu__wrapper"></div>
+    <div class="moj-page-header-actions">
+        <div class="moj-page-header-actions__title">
+            <h1 class="govuk-heading-xl">@ViewData["Title"]</h1>
+        </div>
+        <div class="moj-page-header-actions__actions">
+            <div class="moj-button-menu">
+                <div class="moj-button-menu__wrapper"></div>
+            </div>
         </div>
     </div>
-</div>
 
-@Html.Partial("ApplicationDetailPartial", Model)
+    @Html.Partial("ApplicationDetailPartial", Model)
+</div>
