--- a/CheckYourEligibility-Admin/Views/Application/ApplicationDetailLa.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/ApplicationDetailLa.cshtml
@@ -3,25 +3,26 @@
 
 @{
     ViewData["Title"] = @Model.ParentName;
-    ViewData["Layout"] = "full";
 }
 
-<a class="govuk-back-link" href="@Url.Action("PendingApplications", "Application")" onclick="history.back(); return false;">Back</a>
-@* <a class="govuk-back-link-nolink"></a> *@
+<div class="govuk-grid-column-full">
+    <a class="govuk-back-link" href="@Url.Action("PendingApplications", "Application")" onclick="history.back(); return false;">Back</a>
+    @* <a class="govuk-back-link-nolink"></a> *@
 
-<div class="moj-page-header-actions">
-    <div class="moj-page-header-actions__title">
-        <h1 class="govuk-heading-xl">@ViewData["Title"]</h1>
-    </div>
+    <div class="moj-page-header-actions">
+        <div class="moj-page-header-actions__title">
+            <h1 class="govuk-heading-xl">@ViewData["Title"]</h1>
+        </div>
 
-    <div class="moj-page-header-actions__actions">
-        <div class="moj-button-menu">
-            <div class="moj-button-menu__wrapper">
-                @Html.ActionLink("Approve application", "ApproveConfirmation", "application", new { id = Model.Id }, new { @class = "govuk-button govuk-button--primary moj-button-menu__item" })
-                @Html.ActionLink("Decline application", "DeclineConfirmation", "application", new { id = Model.Id }, new { @class = "govuk-button govuk-button--secondary moj-button-menu__item" })
+        <div class="moj-page-header-actions__actions">
+            <div class="moj-button-menu">
+                <div class="moj-button-menu__wrapper">
+                    @Html.ActionLink("Approve application", "ApproveConfirmation", "application", new { id = Model.Id }, new { @class = "govuk-button govuk-button--primary moj-button-menu__item" })
+                    @Html.ActionLink("Decline application", "DeclineConfirmation", "application", new { id = Model.Id }, new { @class = "govuk-button govuk-button--secondary moj-button-menu__item" })
+                </div>
             </div>
         </div>
     </div>
-</div>
 
-@Html.Partial("ApplicationDetailPartial", Model)
+    @Html.Partial("ApplicationDetailPartial", Model)
+</div>
