--- a/CheckYourEligibility-Admin/Views/Application/DeclineConfirmation.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/DeclineConfirmation.cshtml
@@ -1,19 +1,20 @@
 ﻿@{
     ViewData["Title"] = "Decline this application?";
-    ViewData["Layout"] = "two_thirds";
 }
 
-@* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a> *@
-<a class="govuk-back-link-nolink"></a>
+<div class="govuk-grid-column-two-thirds">
+    @* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a> *@
+    <a class="govuk-back-link-nolink"></a>
 
-<h1 class="govuk-heading-l">@ViewData["Title"]</h1>
-<div class="govuk-warning-text">
-    <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-    <strong class="govuk-warning-text__text">
-        <span class="govuk-visually-hidden">Warning</span>
-        The parent or guardian will have to start a new application if you make a mistake.
-    </strong>
+    <h1 class="govuk-heading-l">@ViewData["Title"]</h1>
+    <div class="govuk-warning-text">
+        <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+        <strong class="govuk-warning-text__text">
+            <span class="govuk-visually-hidden">Warning</span>
+            The parent or guardian will have to start a new application if you make a mistake.
+        </strong>
+    </div>
+
+    @Html.ActionLink("Yes, decline now", "ApplicationDeclineSend", "application", new { id = @TempData["AppApproveId"] }, new { @class = "govuk-button govuk-button--primary" })
+    @Html.ActionLink("No, return to table", "PendingApplications", "application", new { id = @TempData["AppApproveId"] }, new { @class = "govuk-button govuk-button--secondary" })
 </div>
-
-@Html.ActionLink("Yes, decline now", "ApplicationDeclineSend", "application", new { id = @TempData["AppApproveId"] }, new { @class = "govuk-button govuk-button--primary" })
-@Html.ActionLink("No, return to table", "PendingApplications", "application", new { id = @TempData["AppApproveId"] }, new { @class = "govuk-button govuk-button--secondary" })
