--- a/CheckYourEligibility-Admin/Views/BulkCheck/Bulk_Loader.cshtml
+++ b/CheckYourEligibility-Admin/Views/BulkCheck/Bulk_Loader.cshtml
@@ -1,20 +1,21 @@
 ﻿@{
     ViewData["Title"] = "Checking";
-    ViewData["Layout"] = "full";
 }
 
-@* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a>*@
-<a class="govuk-back-link-nolink"></a>
+<div class="govuk-grid-column-full">
+    @* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a>*@
+    <a class="govuk-back-link-nolink"></a>
 
-<div class="govuk-grid-row" id="content" data-url="@Url.Action("Bulk_Loader", "BulkCheck")" data-type="counter-@TempData["currentCounter"]">
-    <div class="govuk-grid-column-full">
-        <div class="flex-container">
-            <div class="container">
-                <h1 class="govuk-heading-l">@ViewData["Title"]</h1>
-                <p class="govuk-body-l">Please wait. This may take a few minutes</p>
-                <span id="currentCounter">@TempData["currentCounter"]</span>/
-                <span id="totalCounter">@TempData["totalCounter"] records processed.</span>
-                <div class="govuk-!-padding-bottom-5"></div>
+    <div class="govuk-grid-row" id="content" data-url="@Url.Action("Bulk_Loader", "BulkCheck")" data-type="counter-@TempData["currentCounter"]">
+        <div class="govuk-grid-column-full">
+            <div class="flex-container">
+                <div class="container">
+                    <h1 class="govuk-heading-l">@ViewData["Title"]</h1>
+                    <p class="govuk-body-l">Please wait. This may take a few minutes</p>
+                    <span id="currentCounter">@TempData["currentCounter"]</span>/
+                    <span id="totalCounter">@TempData["totalCounter"] records processed.</span>
+                    <div class="govuk-!-padding-bottom-5"></div>
+                </div>
             </div>
         </div>
     </div>
