--- a/CheckYourEligibility-Admin/Views/Error/NotFound.cshtml
+++ b/CheckYourEligibility-Admin/Views/Error/NotFound.cshtml
@@ -2,5 +2,7 @@
     ViewData["Title"] = "Not found";
 }
 
-<h1 class="govuk-heading-l">@ViewData["Title"]</h1>
-<p class="govuk-body">The page you are looking for cannot be found.</p>
+<div class="govuk-grid-column-full">
+    <h1 class="govuk-heading-l">@ViewData["Title"]</h1>
+    <p class="govuk-body">The page you are looking for cannot be found.</p>
+</div>
