change content on loader page

--- a/CheckYourEligibility-Admin/Views/Check/Loader.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Loader.cshtml
@@ -1,5 +1,5 @@
 @{
-    ViewData["Title"] = "Checking your entitlement";
+    ViewData["Title"] = "Checking their Eligibility";
 }
 
 <div class="govuk-grid-column-full">
