--- a/CheckYourEligibility-Parent/Views/Home/Cookies.cshtml
+++ b/CheckYourEligibility-Parent/Views/Home/Cookies.cshtml
@@ -233,4 +233,36 @@
             </table>
         </div>
     </div>
+
+    <div class="govuk-grid-row">
+        <div class="govuk-grid-column-two-thirds">
+            <h2 class="govuk-heading-l">Change your cookie settings</h2>
+            <form id="cookie-form" action="/form-handler" method="post" novalidate>
+                <div class="govuk-form-group">
+                    <fieldset class="govuk-fieldset">
+                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+                            Do you want to accept analytics cookies?
+                        </legend>
+                        <div class="govuk-radios" data-module="govuk-radios">
+                            <div class="govuk-radios__item">
+                                <input class="govuk-radios__input" id="cookies-analytics-yes" name="cookies[analytics]" type="radio" value="yes">
+                                <label class="govuk-label govuk-radios__label" for="cookies-analytics-yes">
+                                    Yes
+                                </label>
+                            </div>
+                            <div class="govuk-radios__item">
+                                <input class="govuk-radios__input" id="cookies-analytics-no" name="cookies[analytics]" type="radio" value="no" checked>
+                                <label class="govuk-label govuk-radios__label" for="cookies-analytics-no">
+                                    No
+                                </label>
+                            </div>
+                        </div>
+                    </fieldset>
+                </div>
+                <button type="submit" class="govuk-button" data-module="govuk-button">
+                    Save cookie settings
+                </button>
+            </form>
+        </div>
+    </div>
 </div>
