--- a/CheckYourEligibility-Parent/Views/Shared/_Layout.cshtml
+++ b/CheckYourEligibility-Parent/Views/Shared/_Layout.cshtml
@@ -16,24 +16,29 @@
 </head>
 
 <body class="govuk-template__body" data-clarity="@Configuration["Clarity:Parent"]">
-    <div id="cookie-banner" class="govuk-cookie-banner cookie-hidden" role="region" aria-label="Cookies on Check a family's eligibility" data-nosnippet>
+
+    <div id="cookie-banner" class="govuk-cookie-banner" data-nosnippet="" role="region" aria-label="Cookies on Check a family's eligibility">
         <div class="govuk-cookie-banner__message govuk-width-container">
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-two-thirds">
                     <h2 class="govuk-cookie-banner__heading govuk-heading-m">Cookies on check a family's eligibility</h2>
                     <div class="govuk-cookie-banner__content">
-                        <p class="govuk-body">We use some essential cookies to make this website work.</p>
-                        <p class="govuk-body">We'd like to use analytics cookies so we can understand how you use the service and make improvements.</p>
+                        <p class="govuk-body">We use some essential cookies to make this service work.</p>
+                        <p class="govuk-body">We’d also like to use analytics cookies so we can understand how you use the service and make improvements.</p>
                     </div>
                 </div>
             </div>
 
-            <button class="govuk-button" type="button" id="accept-cookies" data-module="govuk-button">
-                Accept analytics cookies
-            </button>
-            <button class="govuk-button govuk-button--secondary" type="button" id="reject-cookies" data-module="govuk-button">
-                Reject analytics cookies
-            </button>
+            <div class="govuk-button-group">
+                <button type="button" class="govuk-button" id="accept-cookies" data-module="govuk-button" data-govuk-button-init="">
+                    Accept analytics cookies
+                </button>
+                <button type="button" class="govuk-button" id="reject-cookies" data-module="govuk-button" data-govuk-button-init="">
+                    Reject analytics cookies
+                </button>
+                <a class="govuk-link" href="Home/Cookies">View cookies</a>
+            </div>
+
         </div>
     </div>
     <a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>
@@ -155,7 +160,7 @@
     <script src="~/js/dfefrontend.js"></script>
 
 
-    <script type="module" src="~/js/javascript-starter.js"></script>
+    <script type="module" src="~/js/cookieFunctions.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
