Add consent declaration page for schools only in addition to related controller functions.

--- a/CheckYourEligibility-Admin/Views/Home/Index.cshtml
+++ b/CheckYourEligibility-Admin/Views/Home/Index.cshtml
@@ -32,7 +32,7 @@
 
                             <div class="dfe-card-container">
                                 <div class="def-card">
-                                    <a class="govuk-heading-m govuk-link govuk-link--no-visited-state dfe-card-link--header" id="individual" aria-labelledby="individual-heading individual-description" href="@Url.Action("Enter_Details", "Check")">
+                                    <a class="govuk-heading-m govuk-link govuk-link--no-visited-state dfe-card-link--header" id="individual" aria-labelledby="individual-heading individual-description" href="@Url.Action("Consent_Declaration", "Check")">
                                         <span id="individual-heading" class="sr-only">Run a check for one parent or guardian</span>
                                         Run a check for one parent or guardian
                                     </a>
