Add cookie-hidden class to avoid page flicker

--- a/CheckYourEligibility-Parent/Views/Shared/_Layout.cshtml
+++ b/CheckYourEligibility-Parent/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
 
 <body class="govuk-template__body" data-clarity="@Configuration["Clarity:Parent"]">
 
-    <div id="cookie-banner" class="govuk-cookie-banner" data-nosnippet="" role="region" aria-label="Cookies on Check a family's eligibility">
+    <div id="cookie-banner" class="govuk-cookie-banner cookie-hidden" data-nosnippet="" role="region" aria-label="Cookies on Check a family's eligibility">
         <div class="govuk-cookie-banner__message govuk-width-container">
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-two-thirds">
