Amendment to cookies logic and fix layout links to be relative

--- a/CheckYourEligibility-Parent/Views/Shared/_Layout.cshtml
+++ b/CheckYourEligibility-Parent/Views/Shared/_Layout.cshtml
@@ -36,9 +36,8 @@
                 <button type="button" class="govuk-button" id="reject-cookies" data-module="govuk-button" data-govuk-button-init="">
                     Reject analytics cookies
                 </button>
-                <a class="govuk-link" href="Home/Cookies">View cookies</a>
+                <a class="govuk-link" href="/Home/Cookies">View cookies</a>
             </div>
-
         </div>
     </div>
     <a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>
