--- a/CheckYourEligibility-Parent/Views/Shared/_Layout_StartNow.cshtml
+++ b/CheckYourEligibility-Parent/Views/Shared/_Layout_StartNow.cshtml
@@ -31,9 +31,8 @@
                 <button type="button" class="govuk-button" id="reject-cookies" data-module="govuk-button" data-govuk-button-init="">
                     Reject analytics cookies
                 </button>
-                <a class="govuk-link" href="Home/Cookies">View cookies</a>
+                <a class="govuk-link" href="/Home/Cookies">View cookies</a>
             </div>
-
         </div>
     </div>
     <header class="govuk-header " role="banner" data-module="govuk-header">
